--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <i class="fa fa-search-plus fa-2x"></i> <br>Click for Details
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/5p.png" alt="">
+              <img class="img-fluid" src="img/portfolio/5p.jpeg" alt="">
             </a>
           </div>
           
@@ -482,7 +482,7 @@ There are Many Fraud people who sells Netflix’s very cheaper Rate, Before   bu
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary mb-0">Spotify Personal Account</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-2" src="img/portfolio/5p.png" alt="">
+              <img class="img-fluid mb-2" src="img/portfolio/5p.jpeg" alt="">
 
               <div class="mb-5 details-section">
 
