--- a/index.html
+++ b/index.html
@@ -602,17 +602,20 @@ $('.multi-item-carousel').on('slide.bs.carousel', function (e) {
 
 <!-- GetButton.io widget -->
 <script type="text/javascript">
-(function () {
-var options = {
-facebook: "105187301296379", // Facebook page ID
-call_to_action: "Message us", // Call to action
-position: "right", // Position may be 'right' or 'left'
-};
-var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
-var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
-s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
-var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-})();
+    (function () {
+        var options = {
+            facebook: "105187301296379", // Facebook page ID
+            whatsapp: "+8801614815831", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            button_color: "#E74339", // Color of button
+            position: "right", // Position may be 'right' or 'left'
+            order: "facebook,whatsapp", // Order of buttons
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
 </script>
 <!-- /GetButton.io widget -->
 
