--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           <div class="col-md-3 mb-5 mb-lg-0 color_grid_left">
             <h4 class="text-uppercase mb-4"><span class=" fa fa-envelope" aria-hidden="true"></span>Mail Us</h4>
             <p style="font-size: 18px;"><a href="mailto:example@mail.com"> netflixpremiumid2020@gmail.com</a></p>
-            <a class="inmsg" href="https://m.me/rezwansalsabil">Inbox me in Messenger</a>
+            <a class="inmsg btn btn-sm" role="button" href="https://m.me/rezwansalsabil">Inbox me in Messenger</a>
             
 
           </div>
